@@ -1,10 +1,10 @@
 package de.htwsaar.prog3.carrental.model;
 
-import lombok.*;
+import lombok.Data;
+import lombok.EqualsAndHashCode;
 
 import javax.persistence.Column;
 import javax.persistence.Entity;
-import javax.persistence.Table;
 
 /**
  * Employee object model (JPA entity).
@@ -12,17 +12,14 @@ import javax.persistence.Table;
  * @author Julian Quint
  */
 @Entity
-@Table
-@Getter
-@Setter
+@Data
 @EqualsAndHashCode(callSuper = true)
-@NoArgsConstructor
-@AllArgsConstructor
 public class Employee extends BaseEntity {
-    @Column(name = "first_name", nullable = false)
+
+    @Column(nullable = false)
     private String firstName;
 
-    @Column(name = "last_name", nullable = false)
+    @Column(nullable = false)
     private String lastName;
 
     @Column(nullable = false)
@@ -30,6 +27,6 @@ public class Employee extends BaseEntity {
 
     @Override
     public String toString() {
-        return String.format("%s %s", firstName, lastName);
+        return "%s %s".formatted(firstName, lastName);
     }
 }
